// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`MenuPopUp renders correctly 1`] = `
<styled.div
  onClick={[Function]}
  position={
    Object {
      "x": "0px",
      "y": "0px",
    }
  }
>
  <MenuChild
    isClickable={true}
    label="New"
    onClick={[Function]}
  />
  <MenuChild
    isClickable={false}
    label="Open"
    onClick={[Function]}
  />
  <MenuChild
    icon="print"
    isClickable={true}
    label="Print"
    onClick={[Function]}
  />
</styled.div>
`;

exports[`MenuPopUp renders in other position 1`] = `
<styled.div
  position={
    Object {
      "x": "320px",
      "y": "240px",
    }
  }
>
  <MenuChild
    isClickable={true}
    label="New"
    onClick={[Function]}
  />
  <MenuChild
    isClickable={false}
    label="Open"
    onClick={[Function]}
  />
  <MenuChild
    icon="print"
    isClickable={true}
    label="Print"
    onClick={[Function]}
  />
</styled.div>
`;
